# nooshdaroo

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json  example-config.json  example-server-config.json  nooshdaroo-macos-universal
assets/: default-config.json
client/: Cargo.toml
client/src/: chrome_cover.rs  config.rs  dns_codec.rs  doh.rs  iran_ranges.rs  main.rs  russia_ranges.rs  spirit.rs  tunnel.rs  ui.rs
docs/: MULTI_QTYPE_DESIGN.md
lb/: Cargo.toml
lb/src/: main.rs
liteweb/: Cargo.toml
liteweb/src/: config.rs  fetch.rs  image_opt.rs  lib.rs  readability.rs  sanitize.rs  template.rs  tracker_list.rs
server/: Cargo.toml
server/src/: blocklist.rs  config.rs  datadog.rs  dns.rs  dns_cache.rs  kcp_manager.rs  main.rs  noise_session.rs  relay.rs  smux.rs  socks5.rs  turbotunnel.rs
src/: config.rs  dnstt.rs  main.rs  socks5.rs  sushmode.rs  ui.rs
tools/: publish-ota.py
