[package]
name = "dnstt-lb"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Lightweight UDP load balancer for nooshdaroo-server with ClientID sticky routing"

[[bin]]
name = "dnstt-lb"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time", "signal"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
data-encoding = "2"
rand = "0.8"
dashmap = "6"
socket2 = { version = "0.5", features = ["all"] }
