[package]
name = "liteweb"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Server-side content proxy: fetch, extract, sanitize, optimize for bandwidth-constrained tunnels"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
scraper = "0.22"
ego-tree = "0.10"
url = "2"
image = { version = "0.25", default-features = false, features = ["webp", "jpeg", "png", "gif"] }
base64 = "0.22"
regex = "1"
once_cell = "1"
log = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "sync"] }
blake3 = "1"
