[package]
name = "nooshdaroo-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Wire-compatible Rust reimplementation of dnstt-server"

[dependencies]
# Noise_NK_25519_ChaChaPoly_BLAKE2s
snow = "0.9"

# KCP ARQ (low-level state machine, we own transport)
kcp = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SO_REUSEPORT support
socket2 = { version = "0.5", features = ["all"] }

# Base32 encoding (RFC 4648, no padding)
data-encoding = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# JSON config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Byte buffer utilities
bytes = "1"

# Concurrent HashMap for session routing
dashmap = "5"

# Hex encoding for keys
hex = "0.4"

# Random number generation
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# X25519 key derivation (for pubkey from privkey)
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Time utilities
once_cell = "1"

# Error handling
anyhow = "1"

# LiteWeb content proxy
liteweb = { path = "../liteweb" }

# CPU count for send loop scaling
num_cpus = "1"

# Datadog metrics export (non-blocking HTTP POST)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[[bin]]
name = "nooshdaroo-server"
path = "src/main.rs"

